--- a/client/src/app/client/portfolio/components/gallery.component.css
+++ b/client/src/app/client/portfolio/components/gallery.component.css
@@ -1,10 +1,19 @@
+ul li {
+  display: inline !important;
+  padding: 10px !important;
+}
+
+li {
+  list-style-type: none;
+}
+
 /* Spinner */
 .spinner {
   font-size: 300%;
   position: absolute;
   top: 50%;
   left: 50%;
-  z-index: 10
+  z-index: 10;
 }
 
 .fa-spinner {
