--- a/client/src/app/client/portfolio/containers/portfolio-container.component.html
+++ b/client/src/app/client/portfolio/containers/portfolio-container.component.html
@@ -3,6 +3,7 @@
     [photos]="albums"
     [genres]="genres$ | async"
     [isLoading]="isLoading$ | async"
+    (selectedGenre)="onGenreSelected($event)"
   >
   </client-portfolio>
 </div>
