--- a/client/src/app/admin/genres/genres.component.html
+++ b/client/src/app/admin/genres/genres.component.html
@@ -5,168 +5,60 @@
   </nav>
   <div id="page-wrapper">
     <div class="row">
-      <div class="panel panel-default">
+      <div class="panel panel-default ">
         <div class="panel-heading">Genres</div>
-        <div *ngIf="genres && genres.length > 0">
-          <div class="panel-body" *ngFor="let genre of genres; let i = index;">
-            <table class="table">
-              <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Genre</th>
-                <th scope="col"></th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <th scope="row">{{i}}</th>
-                <td>{{genre.name}}</td>
-                <td>
-                  <button type="button"
-                          class="btn btn-info"
-                          data-toggle="modal"
-                          data-target="#updateModal"
-                  >
-                    Update
-                  </button>
-
-                  <button
-                    type="button"
-                    class="btn btn-danger"
-                    data-toggle="modal"
-                    data-target="#deleteModal"
-                  >
-                    Delete
-                  </button>
-
-                </td>
-              </tr>
-              </tbody>
-            </table>
+        <div [formGroup]="genresForm">
+          <div class="col-xs-12 col-md-4 panel-body">
+            <label for="addGenre">New Genre: </label>
+            <input type="text"
+                   id="addGenre"
+                   class="form-control input-sm"
+                   placeholder="Genre Name"
+                   formControlName="newGenre"
+            >
             <button type="button"
                     class="btn btn-success"
                     data-toggle="modal"
                     data-target="#addModal"
+                    (click)="addGenre()"
             >
               Add Genre
             </button>
-
           </div>
-        </div>
-        <div id="addModal"
-             class="modal fade"
-             role="dialog"
-        >
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button"
-                        class="close"
-                        data-dismiss="modal"
-                >&times;
-                </button>
-                <h4 class="modal-title">New Genre</h4>
-              </div>
-              <div class="modal-body">
-                <form class="form-horizontal">
-                  <div class="form-group">
-                    <label
-                      class="control-label col-sm-2"
-                      for="genre"
-                    >
-                      Genre:
-                    </label>
-                    <div class="col-sm-10">
-                      <input type="text"
-                             class="form-control"
-                             id="genre"
-                             placeholder="Genre Name"
-                      >
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                      <button
-                        class="btn btn-default"
-                        (click)="addGenre(null)"
-                      >
-                        Add
-                      </button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-default"
-                  data-dismiss="modal"
-                >
-                  Close
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="updateModal"
-             class="modal fade"
-             role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Update Genre</h4>
-              </div>
-              <div class="modal-body">
-                <form class="form-horizontal">
-                  <div class="form-group">
-                    <label class="control-label col-sm-2" for="updateGenre">Genre:</label>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" id="updateGenre" placeholder="Genre Name">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                      <button class="btn btn-success" (click)="updateGenre(null)">Ok</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="deleteModal"
-             class="modal fade"
-             role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button
-                  type="button"
-                  class="close"
-                  data-dismiss="modal"
-                >&times;
-                </button>
-                <h4 class="modal-title">Delete Genre</h4>
-              </div>
-              <div class="modal-body">
-                <button
-                  type="button"
-                  class="btn
-                          btn-danger"
-                  (click)="deleteGenre(null)"
-                >
-                  Ok
-                </button>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-              </div>
+          <div class="clearfix"></div>
+          <div class="panel-body"
+               formArrayName="genresArray"
+               *ngFor="let genre of getGenresFormArray.controls; let i = index;">
+            <div [formGroupName]="i" class="col-xs-12 col-md-4 pull-left">
+              <input type="text"
+                     class="form-control input-sm"
+                     placeholder="Genre Name"
+                     formControlName="genreName"
+              >
+              <button
+                *ngIf="!isUpdateInProgress"
+                (click)="updateGenre(getGenreFromFormArray(i))"
+                class="btn btn-info btn-outline"
+              >Update
+              </button>
+              <button
+                *ngIf="isUpdateInProgress"
+                (click)="confirmUpdate(getGenreFromFormArray(i))"
+                class="btn btn-success btn-outline"
+              >Ok
+              </button>
+              <button
+                *ngIf="isUpdateInProgress"
+                (click)="cancelUpdate(getGenreFromFormArray(i))"
+                class="btn btn-warning btn-outline"
+              >Cancel
+              </button>
+              <button
+                *ngIf="!isUpdateInProgress"
+                (click)="deleteGenre(getGenreFromFormArray(i))"
+                class="btn btn-danger btn-outline"
+              >Delete
+              </button>
             </div>
           </div>
         </div>
