added components for photo (admin): upload & gallery. Minor updates to server

--- a/client/src/app/admin/genres/containers/genres-container.component.html
+++ b/client/src/app/admin/genres/containers/genres-container.component.html
@@ -1,7 +1,7 @@
-<app-genres
+<admin-genres
   [genres]="genres$ | async"
   (genreAdded)="addGenre($event)"
   (genreUpdated)="updateGenre($event)"
   (genreDeleted)="deleteGenre($event)"
 >
-</app-genres>
+</admin-genres>
