--- a/client/src/app/admin/genres/components/genres.component.html
+++ b/client/src/app/admin/genres/components/genres.component.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <app-header></app-header>
-    <app-sidenav></app-sidenav>
+    <admin-header></admin-header>
+    <admin-sidenav></admin-sidenav>
   </nav>
   <div id="page-wrapper">
     <div class="row">
