--- a/client/src/app/admin/header/header.component.html
+++ b/client/src/app/admin/header/header.component.html
@@ -5,5 +5,5 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-  <a class="navbar-brand" href="index.html">SB Admin</a>
+  <a class="navbar-brand" href="index.html">SG Pixels</a>
 </div>
