--- a/client/src/app/admin/sidenav/sidenav.component.html
+++ b/client/src/app/admin/sidenav/sidenav.component.html
@@ -1,16 +1,14 @@
 <div class="collapse navbar-collapse navbar-ex1-collapse">
   <ul class="nav navbar-nav side-nav">
-    <li class="active"><a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+    <li class="active"><a [routerLink]="['/admin']"><i class="fa fa-dashboard"></i> Dashboard</a></li>
     <li><a [routerLink]="['/admin/genres']" href=""><i class="fa fa-camera-retro"></i> Genres</a></li>
-    <li><a [routerLink]="['/admin/photos']"><i class="fa fa-camera-retro"></i> Photos</a></li>
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-caret-square-o-down"></i> Dropdown
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-caret-square-o-down"></i> Photos
         <b class="caret"></b></a>
       <ul class="dropdown-menu">
-        <li><a href="#">Dropdown Item</a></li>
-        <li><a href="#">Another Item</a></li>
-        <li><a href="#">Third Item</a></li>
-        <li><a href="#">Last Item</a></li>
+        <li><a [routerLink]="['/admin/photos']" [queryParams]="{genre:''}"><i class="fa fa-camera-retro"></i> View
+          Photos</a></li>
+        <li><a [routerLink]="['/admin/upload']"><i class="fa fa-camera-retro"></i> Upload Photo</a></li>
       </ul>
     </li>
   </ul>
