--- a/client/src/app/admin/photos/components/photos-gallery.component.html
+++ b/client/src/app/admin/photos/components/photos-gallery.component.html
@@ -4,3 +4,11 @@
        style="float:left;display:inline-block;"
        width="100px"/>
 </div>
+<!--<div fxFill fxLayout="column" fxLayoutAlign="space-between">-->
+<!--  <ng-container fxLayout="row wrap" *ngFor="let image of photos; let i=index">-->
+<!--    <img [src]="image.src" class="img-thumbnail img-responsive"-->
+<!--         (click)="openSelectedImage(i)" [alt]="image.caption"-->
+<!--         style="float:left;display:inline-block;"-->
+<!--         width="100px"/>-->
+<!--  </ng-container>-->
+<!--</div>-->
