--- a/client/src/app/admin/photos/components/gallery/dialogs/photos-edit-dialog.component.html
+++ b/client/src/app/admin/photos/components/gallery/dialogs/photos-edit-dialog.component.html
@@ -1,6 +1,27 @@
 <h2 mat-dialog-title>Update Photo</h2>
-<mat-dialog-content style="height:800px">
-  <form [formGroup]="form" (ngSubmit)="onConfirm()" (reset)="resetForm()">
+<mat-dialog-content style="height: 800px;">
+  <form [formGroup]="form">
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input
+        type="text"
+        formControlName="name"
+        class="form-control input-sm"
+        id="name"
+      />
+      <span *ngIf="f?.name?.touched && f?.name.invalid">
+        <span *ngIf="f?.name?.errors?.required" style="color: red;">
+          Name is required
+        </span>
+        <span
+          *ngIf="f?.name?.errors?.minLength || f?.name?.errors?.maxlength"
+          style="color: red;"
+        >
+          Invalid Name
+        </span>
+      </span>
+    </div>
+
     <div class="form-group">
       <label for="genres">Genres:</label>
       <ng-multiselect-dropdown
@@ -24,6 +45,7 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button color="primary" (click)="onDismiss()">Cancel</button>
+  <button mat-button color="info" (click)="resetForm()">Reset</button>
   <button mat-button color="warn" (click)="onConfirm()" cdkFocusInitial>
     Yes
   </button>
