--- a/client/src/app/client/about/components/about.component.html
+++ b/client/src/app/client/about/components/about.component.html
@@ -10,7 +10,7 @@
             less is beautiful
           </h1>
           <br>
-          <img class="img-responsive margin-top-45" src="img/4.jpg" alt="me">
+          <img class="img-responsive margin-top-45" src="../../../assets/img/4.jpg" alt="me">
         </div>
       </div>
       <br>
