--- a/client/src/app/client/navigation/navigation.component.html
+++ b/client/src/app/client/navigation/navigation.component.html
@@ -2,13 +2,13 @@
   <div class="col-md-12">
     <div class="nav">
       <button class="btn-nav">
-        <span class="icon-bar inverted top"></span>
-        <span class="icon-bar inverted middle"></span>
-        <span class="icon-bar inverted bottom"></span>
+        <span class="icon-bar inverted top" [ngClass]="{'icon-bar-dark': ( isDarkColor$ | async)}"></span>
+        <span class="icon-bar inverted middle"[ngClass]="{'icon-bar-dark': ( isDarkColor$ | async)}" ></span>
+        <span class="icon-bar inverted bottom" [ngClass]="{'icon-bar-dark': ( isDarkColor$ | async)}"></span>
       </button>
     </div>
     <a class="navbar-brand" href="index.html">
-      <img class="logo" src="img/logo.png" alt="logo">
+      <img class="logo" src="../../../assets/img/sg_pixels_logo.png" alt="logo">
     </a>
     <div class="nav-content hideNav hidden">
       <ul class="nav-list vcenter">
