--- a/client/src/app/admin/sidenav/sidenav.component.html
+++ b/client/src/app/admin/sidenav/sidenav.component.html
@@ -71,7 +71,7 @@
         <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
         <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
         <li class="divider"></li>
-        <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
+        <li><a href="#" (click)="logOut($event)"><i class="fa fa-power-off"></i> Log Out</a></li>
       </ul>
     </li>
   </ul>
