--- a/client/src/app/admin/genres/components/genres.component.html
+++ b/client/src/app/admin/genres/components/genres.component.html
@@ -20,7 +20,7 @@
                     class="btn btn-success"
                     data-toggle="modal"
                     data-target="#addModal"
-                    [disabled]="!!this.genresForm.get('newGenre')?.value?.length"
+                    [disabled]="!this.genresForm.get('newGenre')?.value?.length"
                     (click)="addGenre()"
             >
               Add Genre
